--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <hibernate.version>5.1.0.Final</hibernate.version>
         <hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
+        <lombok.version>1.18.2</lombok.version>
     </properties>
 
     <build>
@@ -70,6 +71,20 @@
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate-validator.version}</version>
             <type>jar</type>
+        </dependency>
+
+
+        <!-- Other stuff -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.3</version>
         </dependency>
 
     </dependencies>
