--- a/src/main/application.properties.dist
+++ b/src/main/application.properties.dist
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/dl
 spring.datasource.username=***
 spring.datasource.password=***
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.hibernate.ddl-auto=update
