--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "materialize-css": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-materialize": "^3.3.1",
+    "react-materialize": "^3.3.2",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "webpack": "^4.35.0"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "watch": "webpack --watch -d",
@@ -28,7 +27,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
-    "webpack": "^4.19.1",
+    "webpack": "^4.35.2",
     "webpack-cli": "^3.1.0"
   },
   "eslintConfig": {
